Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: kube-system
  name: traefik-ingress
  labels:
    app: traefik-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress
  template:
    metadata:
      labels:
        app: traefik-ingress
    spec:
      serviceAccountName: traefik-ingress
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      containers:
        - name: traefik
          image: traefik:2.2
          args:
            - --configFile=/config/traefik.toml
          volumeMounts:
            - name: traefik-config
              mountPath: /config/
            - name: traefik-custom
              mountPath: /custom/
            - name: traefik-certs
              mountPath: /certs/
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: dashboard
              containerPort: 8080
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
        - name: traefik-custom
          configMap:
            name: traefik-custom
        - name: traefik-certs
          persistentVolumeClaim:
            claimName: traefik-certs
